# stellar-tipjar-contracts

./: CHANGES_SUMMARY.md  Cargo.toml  PR_DESCRIPTION_INTEGRATION_TESTS.md  SUBSCRIPTION_IMPLEMENTATION.md
.github/workflows/: deploy.yml
contracts/tipjar/: Cargo.toml
contracts/tipjar/src/: lib.rs
contracts/tipjar/src/royalty/: mod.rs
contracts/tipjar/test_snapshots/tests/: test_balance_tracking_and_withdraw.1.json  test_leaderboard_offset_past_end_returns_empty.1.json  test_leaderboard_queries_available_while_paused.1.json  test_leaderboard_tiebreaker_ordering.1.json  test_leaderboard_tip_updates_all_periods.1.json  test_multi_token_balance_and_withdraw.1.json  (+5 more)
deployment/: config.json
docs/: CONTRACT_SPEC.md  EVENTS.md
indexer/: Cargo.toml
indexer/src/: event_listener.rs  event_parser.rs  main.rs
indexer/src/api/: events.rs
indexer/src/db/: schema.rs
scripts/: backup-contract.sh  deploy_mainnet.sh  deploy_testnet.sh  restore-contract.sh  rollback.sh  verify_deployment.sh
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/src/: README.md  TipJarContract.ts  errors.ts  index.ts  package.json  types.ts  utils.ts
tests/: advanced_features.rs  backup_recovery.rs  core_functionality.rs  cross_contract.rs  edge_cases.rs  failure_scenarios.rs  gas_analysis.rs  integration_tests.rs  leaderboard_tests.rs  pause_tests.rs  property_tests.rs  subscription_tests.rs  tip_split_tests.rs
tests/common/: mod.rs
tools/backup/: Cargo.toml  backup_scheduler.rs  checksum.rs  crypto.rs  state_exporter.rs  state_importer.rs  storage.rs  types.rs
