[package]
name = "tipjar-backup"
version = "0.1.0"
edition = "2021"
description = "Contract state backup and recovery tools for TipJar"

[[bin]]
name = "state-exporter"
path = "state_exporter.rs"

[[bin]]
name = "state-importer"
path = "state_importer.rs"

[[bin]]
name = "backup-scheduler"
path = "backup_scheduler.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
